fixed IE6 layout issue

--- a/public/stylesheets/loginie.css
+++ b/public/stylesheets/loginie.css
@@ -15,3 +15,22 @@ root {
     display: block;
 }
 
+#yellowBar  {width:100%;
+height:5px;
+background:url("../images/login2.jpg") repeat-x top left;
+/*background-color:#ffdb00;*/
+position:fixed;
+overflow:hidden;
+margin:0;
+padding:0;
+top:316px;
+left:0px;
+}
+
+#secure {
+    float:right;
+    color:#000;
+    font-family:Verdana,Geneva,sans-serif;
+    font-size:11px;
+    margin: 85px 18px 0 0;
+}
